--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   db:
-    image: postgres:13
+    image: postgres
     container_name: nestdb
     ports:
         - 5434:5432
