--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "github:nestjs/config",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.3.9",
     "@prisma/client": "^4.11.0",
     "argon2": "^0.30.3",
     "axios": "^1.3.4",
@@ -44,6 +44,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
