--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@nestjs/config": "github:nestjs/config",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.3.9",
+    "@nestjs/platform-socket.io": "^9.3.9",
+    "@nestjs/websockets": "^9.3.9",
     "@prisma/client": "^4.11.0",
     "argon2": "^0.30.3",
     "axios": "^1.3.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "date-fns": "^2.29.3",
     "ejs": "^3.1.8",
     "express-useragent": "^1.0.15",
