added pinpong game

--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nest-middlewares/cors": "^7.0.1",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/axios": "^2.0.0",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/common": "^9.3.9",
     "@nestjs/config": "github:nestjs/config",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.3.9",
@@ -38,13 +39,16 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "ejs": "^3.1.8",
     "express-useragent": "^1.0.15",
     "geoip-lite": "^1.4.7",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "socket.io": "^4.6.1",
+    "socket.io-parser": "^4.2.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
