--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/platform-socket.io": "^9.3.9",
     "@nestjs/websockets": "^9.3.9",
     "@prisma/client": "^4.11.0",
+    "@types/ejs": "^3.1.2",
     "argon2": "^0.30.3",
     "axios": "^1.3.4",
     "class-transformer": "^0.5.1",
@@ -42,6 +43,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "ejs": "^3.1.8",
+    "express": "^4.18.2",
     "express-useragent": "^1.0.15",
     "geoip-lite": "^1.4.7",
     "reflect-metadata": "^0.1.13",
