--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express": "^4.18.2",
     "express-useragent": "^1.0.15",
     "geoip-lite": "^1.4.7",
+    "html": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
     "rxjs": "^7.2.0",
