--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@nest-middlewares/cors": "^7.0.1",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/axios": "^2.0.0",
@@ -32,6 +33,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.3.9",
     "@nestjs/platform-socket.io": "^9.3.9",
+    "@nestjs/serve-static": "^3.0.1",
     "@nestjs/websockets": "^9.3.9",
     "@prisma/client": "^4.11.0",
     "@types/ejs": "^3.1.2",
@@ -47,6 +49,7 @@
     "express-useragent": "^1.0.15",
     "geoip-lite": "^1.4.7",
     "html": "^1.0.0",
+    "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
     "rxjs": "^7.2.0",
