--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "express-useragent": "^1.0.15",
     "geoip-lite": "^1.4.7",
     "html": "^1.0.0",
+    "jimp": "^0.22.7",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
     "rxjs": "^7.2.0",
+    "sharp": "^0.31.3",
     "socket.io": "^4.6.1",
     "socket.io-parser": "^4.2.2"
   },
