--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
