--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "html": "^1.0.0",
     "jimp": "^0.22.7",
     "multer": "^1.4.5-lts.1",
+    "random-words": "^1.3.0",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
     "rxjs": "^7.2.0",
